# PythonProject7

./: README.md  demo.py  dz2-1.py  dz2-2.py  dz2_3.py  dz3_1.py  dz3_2.py  dz3_3.py  dz4_1.py  dz4_2.py  dz4_2_ver2.py  dz4_2_ver3.py  dz4_2ver4.py  main.py  pyproject.toml  requirements.txt
Tests/: test_dz3_1.py  test_dz3_2.py  test_dz3_3.py  test_dz3_3_ver1.py  test_dz4_2_ver3.py  test_dz4_2ver4.py
