[project]
name = "pythonproject7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "django==6.0.4",
    "idna==3.11",
    "matplotlib>=3.10.8",
    "mypy>=1.20.2",
    "requests==2.33.1",
    "sqlparse==0.5.5",
    "tzdata==2026.1",
    "urllib3==2.6.3",
]
